# funstall

./: .gitignore  README.md  install.nu  packages.yaml  pyproject.toml
docs/design/: updates.md
funstall/: application_context.py  cli.py  config.py  installation.py  proc_utils.py  system_paths.py
funstall/installation/: installation.py  npm.py  nushell.py  pip.py  source_priorities.py
funstall/installation_strategies/: python.py
